--- a/app/_home.html
+++ b/app/_home.html
@@ -1,6 +1,6 @@
 <main class="main">
 
-  <div class="container flex">
+  <div class="main-content container flex">
     <section class="main-section flex-auto">
 
       <div class="checkout-block shadow">
