--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
 </header>
 	<main class="main">
 
-  <div class="container flex">
+  <div class="main-content container flex">
     <section class="main-section flex-auto">
 
       <div class="checkout-block shadow">
@@ -863,31 +863,31 @@
 </main>
 	<footer>
   <div class="main-footer">
-    <ul class="footer-nav center flex flex-wrap justify-center">
+    <ul class="footer-nav center flex flex-wrap justify-center mb3">
       <li>
-        <a class="no-underline" href="/help">Privacy &amp; Security</a>
+        <a href="#">Privacy &amp; Security</a>
       </li>
       <li>
-        <a class="no-underline" href="/terms-and-conditions">CA Privacy Rights</a>
+        <a href="#">CA Privacy Rights</a>
       </li>
       <li>
-        <a class="no-underline" href="/all-departments">Do Not Sell My Personal Information</a>
+        <a href="#">Do Not Sell My Personal Information</a>
       </li>
       <li>
-        <a href="//dxfairmall.com/account/api/ccpa-intake?native=false&amp;app=gm&amp;type=access" class="no-underline" target="_blank" rel="noopener noreferrer">Request My Personal Information</a>
+        <a href="#" target="_blank" rel="noopener noreferrer">Request My Personal Information</a>
       </li>
-      <li><a class="no-underline" href="/help">Help</a></li>
+      <li><a href="#">Help</a></li>
       <li>
-        <a class="no-underline" href="/help/article/walmart-com-terms-of-use/3b75080af40340d6bbd596f116fae5a0">Terms of Use</a>
-      </li>
-      <li>
-        <a class="no-underline" href="/all-departments">All Departments</a>
+        <a href="#">Terms of Use</a>
       </li>
       <li>
-        <a class="no-underline pointer f6 white" href="/store/directory">Store Directory</a>
+        <a href="#">All Departments</a>
+      </li>
+      <li>
+        <a href="#">Store Directory</a>
       </li>
     </ul>
-    <div class="text-center">© 2021 Walmart. All Rights Reserved.</div>
+    <div class="f6 text-center">© 2021 Walmart. All Rights Reserved.</div>
   </div>
 </footer>
 	<script src="libs/jquery/jquery.min.js"></script>
