add js for scroll bottom

--- a/app/_home.html
+++ b/app/_home.html
@@ -442,8 +442,8 @@
                       </div>
                     </div>
 
-                    <div class="flex flex-row w-25">
-                      <div class="f5 mid-gray nowrap tl w-100 pr4"><span>Qty 1</span></div>
+                    <div class="price-qty flex flex-row w-25">
+                      <div class="f5 mid-gray w-100 pr4"><span>Qty 1</span></div>
                       <div class="f5 bold"><span>$19.97</span></div>
                     </div>
                   </div>
@@ -471,8 +471,8 @@
                       </div>
                     </div>
 
-                    <div class="flex flex-row w-25">
-                      <div class="f5 mid-gray nowrap tl w-100 pr4"><span>Qty 1</span></div>
+                    <div class="price-qty flex flex-row w-25">
+                      <div class="f5 mid-gray w-100 pr4"><span>Qty 1</span></div>
                       <div class="f5 bold"><span>$19.97</span></div>
                     </div>
                   </div>
@@ -500,8 +500,8 @@
                       </div>
                     </div>
 
-                    <div class="flex flex-row w-25">
-                      <div class="f5 mid-gray nowrap tl w-100 pr4"><span>Qty 1</span></div>
+                    <div class="price-qty flex flex-row w-25">
+                      <div class="f5 mid-gray w-100 pr4"><span>Qty 1</span></div>
                       <div class="f5 bold"><span>$19.97</span></div>
                     </div>
                   </div>
@@ -557,7 +557,7 @@
             </div>
 
             <div class="flex row-form">
-              <div class="form-input mb3 w-50 pr-1 pl-1">
+              <div class="form-input mb3 w-50-fix pr-1 pl-1">
                 <div class="input-wrapper">
                   <select id="cc_exp_month" name="cc_exp_month">
                     <option value="" selected disabled>MM</option>
@@ -583,7 +583,7 @@
                 </div>
               </div>
 
-              <div class="form-input mb3 w-50 pr-1 pl-1">
+              <div class="form-input mb3 w-50-fix pr-1 pl-1">
                 <div class="input-wrapper">
                   <select id="cc_exp_year" name="cc_exp_year">
                     <option value="" selected disabled>YY</option>
@@ -799,22 +799,22 @@
 
           <div class="flex flex-column center">
 
-            <div class="flex flex-row justify-between items-center f5 pt3">
+            <div class="price-item flex flex-row justify-between items-center f5 pt3">
               <p><span class="bold">Subtotal&nbsp;</span><span>(1 item)</span></p>
               <p class="mid-gray f5">$19.97</p>
             </div>
 
-            <div class="flex flex-row justify-between items-center f6 mid-gray">
+            <div class="price-item flex flex-row justify-between items-center f6 mid-gray">
               <p>Below order minimum (less than $35)</p>
               <div>$5.99</div>
             </div>
 
-            <div class="flex flex-row justify-between items-center pb3">
+            <div class="price-item flex flex-row justify-between items-center pb3">
               <p class="bold f5">Estimated taxes</p>
               <p class="f5 bold">$2.17</p>
             </div>
 
-            <div class="flex flex-row justify-between items-center dark-gray pt3 f3 bt">
+            <div class="total-price flex flex-row justify-between items-center dark-gray pt3 f3 bt">
               <p class="bold">Estimated total</p>
               <p class="bold">$28.13</p>
             </div>
