add validations plugin

--- a/app/_home.html
+++ b/app/_home.html
@@ -13,25 +13,27 @@
           
           <p class="gray f6 pb3">* Required fields</p>
 
-          <div class="wrapper-shipping-form mb3">
+          <form id="form" class="wrapper-shipping-form mb3">
+
+            <button>adasd</button>
 
             <div class="row-form flex">
               <div class="form-input mb3 w-50 pr-1 pl-1">
                 <div class="input-wrapper">
                   <input type="text" name="ship_first_name" id="ship_first_name" value="" placeholder="First Name*" class="required_field">
                 </div>
-                <div class="error red small">
-                  <span>Please enter a valid name <i class="fas fa-exclamation-circle"></i></span>
-                </div>
+                <!--<div class="error red small">-->
+                  <!--<span>Please enter a valid name <i class="fas fa-exclamation-circle"></i></span>-->
+                <!--</div>-->
               </div>
 
               <div class="form-input mb3 w-50 pr-1 pl-1">
                 <div class="input-wrapper">
                   <input type="text" name="ship_last_name" id="ship_last_name" value="" placeholder="Last Name*" class="required_field">
                 </div>
-                <div class="error red small">
-                  <span>Please enter a valid name <i class="fas fa-exclamation-circle"></i></span>
-                </div>
+                <!--<div class="error red small">-->
+                  <!--<span>Please enter a valid name <i class="fas fa-exclamation-circle"></i></span>-->
+                <!--</div>-->
               </div>
             </div>
 
@@ -40,25 +42,25 @@
                 <div class="input-wrapper">
                   <input type="text" name="ship_address" id="ship_address" value="" placeholder="Address*" class="required_field">
                 </div>
-                <div class="error red small">
-                  <span>Please enter a valid name <i class="fas fa-exclamation-circle"></i></span>
-                </div>
+                <!--<div class="error red small">-->
+                  <!--<span>Please enter a valid name <i class="fas fa-exclamation-circle"></i></span>-->
+                <!--</div>-->
               </div>
 
               <div class="form-input mb3 w-50 pr-1 pl-1">
                 <div class="input-wrapper">
                   <input type="text" name="ship_city" id="ship_city" value="" placeholder="City*" class="required_field">
                 </div>
-                <div class="error red small">
-                  <span>Please enter a valid name <i class="fas fa-exclamation-circle"></i></span>
-                </div>
+                <!--<div class="error red small">-->
+                  <!--<span>Please enter a valid name <i class="fas fa-exclamation-circle"></i></span>-->
+                <!--</div>-->
               </div>
             </div>
 
             <div class="flex row-form">
               <div class="form-input mb3 w-50 pr-1 pl-1">
                 <div class="input-wrapper">
-                  <select id="ship_state" name="ship_state" id="ship_state" class="required_field">
+                  <select id="ship_state" name="ship_state" class="required_field">
                     <option value="" selected disabled>State*</option>
                     <option value="AL">Alabama</option>
                     <option value="AK">Alaska</option>
@@ -124,25 +126,25 @@
                     <path d="M8 10l3.5-4h-7z" fill-rule="evenodd"></path>
                   </svg>
                 </div>
-                <div class="error red small">
-                  <span>Please select State <i class="fas fa-exclamation-circle"></i></span>
-                </div>
+                <!--<div class="error red small">-->
+                  <!--<span>Please select State <i class="fas fa-exclamation-circle"></i></span>-->
+                <!--</div>-->
               </div>
 
               <div class="form-input mb3 w-50 pr-1 pl-1">
                 <div class="input-wrapper">
                   <input type="text" name="ship_zip" id="ship_zip" value="" placeholder="Zip*" class="required_field">
                 </div>
-                <div class="error red small">
-                  <span>Please enter a valid zip <i class="fas fa-exclamation-circle"></i></span>
-                </div>
+                <!--<div class="error red small">-->
+                  <!--<span>Please enter a valid zip <i class="fas fa-exclamation-circle"></i></span>-->
+                <!--</div>-->
               </div>
             </div>
 
             <div class="flex row-form">
               <div class="form-input mb3 w-50 pr-1 pl-1">
                 <div class="input-wrapper">
-                  <select id="ship_country" name="ship_country" id="ship_country" class="required_field">
+                  <select id="ship_country" name="ship_country" class="required_field">
                     <option value="" selected disabled>Country*</option>
                     <option value="AX">Aland</option>
                     <option value="AL">Albania</option>
@@ -379,18 +381,18 @@
                     <path d="M8 10l3.5-4h-7z" fill-rule="evenodd"></path>
                   </svg>
                 </div>
-                <div class="error red small">
-                  <span>Please select Country <i class="fas fa-exclamation-circle"></i></span>
-                </div>
+                <!--<div class="error red small">-->
+                  <!--<span>Please select Country <i class="fas fa-exclamation-circle"></i></span>-->
+                <!--</div>-->
               </div>
 
               <div class="form-input mb3 w-50 pr-1 pl-1">
                 <div class="input-wrapper">
                   <input type="text" name="ship_phone" id="ship_phone" value="" placeholder="Phone*" class="required_field">
                 </div>
-                <div class="error red small">
-                  <span>Please enter a valid phone <i class="fas fa-exclamation-circle"></i></span>
-                </div>
+                <!--<div class="error red small">-->
+                  <!--<span>Please enter a valid phone <i class="fas fa-exclamation-circle"></i></span>-->
+                <!--</div>-->
               </div>
             </div>
 
@@ -404,16 +406,16 @@
               <div class="input-wrapper">
                 <input type="text" name="bill_email" id="email-field" value="" placeholder="E-mail*" class="required_field email_field">
               </div>
-              <div class="error red small">
-                <span>Please enter a valid email <i class="fas fa-exclamation-circle"></i></span>
-              </div>
+              <!--<div class="error red small">-->
+                <!--<span>Please enter a valid email <i class="fas fa-exclamation-circle"></i></span>-->
+              <!--</div>-->
             </div>
 
             <div class="form-input mb3 w-100">
               <input type="checkbox" id="is_gift" name="is_gift" value="1">
               <label for="is_gift" class="bold">Click here if your order is a gift</label>
             </div>
-          </div>
+          </form>
 
           <p class="marked mb4 bold">Please fill in all the blanks in English.</p>
 
