--- a/app/_scripts.html
+++ b/app/_scripts.html
@@ -1,2 +1,3 @@
 <script src="libs/jquery/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
 <script src="js/main.js"></script>
