--- a/app/_scripts.html
+++ b/app/_scripts.html
@@ -1,3 +1,4 @@
 <script src="libs/jquery/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
 <script src="js/main.js"></script>
