--- a/app/index.html
+++ b/app/index.html
@@ -26,11 +26,8 @@
 	<link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
-	<header class="main-header flex justify-center">
-  <button class="back-btn">
-    <i class="fas fa-chevron-left"></i>
-  </button>
-  <h2 class="f4 bold">Checkout</h2>
+	<header class="main-header">
+  <h2 class="f4 bold text-center">Checkout</h2>
 </header>
 	<main class="main">
   <form id="form_checkout">
