--- a/app/_header.html
+++ b/app/_header.html
@@ -1,6 +1,3 @@
-<header class="main-header flex justify-center">
-  <button class="back-btn">
-    <i class="fas fa-chevron-left"></i>
-  </button>
-  <h2 class="f4 bold">Checkout</h2>
+<header class="main-header">
+  <h2 class="f4 bold text-center">Checkout</h2>
 </header>
