add custom input number

--- a/app/_home.html
+++ b/app/_home.html
@@ -11,6 +11,14 @@
 
           <div class="inner-wrapper">
 
+
+            <div class="custom-input-number">
+              <span class="minus">&#8722;</span>
+              <input type="text" value="1"/>
+              <span class="plus">+</span>
+            </div>
+
+
             <p class="gray f6 pb3">* Required fields</p>
 
             <div class="row-form flex">
