add coupon code input

--- a/app/index.html
+++ b/app/index.html
@@ -41,13 +41,23 @@
 
           <div class="inner-wrapper">
 
-
             <div class="custom-input-number">
               <span class="minus">&#8722;</span>
               <input type="text" value="1"/>
               <span class="plus">+</span>
             </div>
 
+            <div class="coupon-input flex align-center">
+              <p class="f4 bold">Apply coupon code:</p>
+
+              <div class="form-input w-25 pr-1 pl-1">
+                <div class="input-wrapper">
+                  <input type="text" name="coupon_code" id="coupon_code" value="">
+                </div>
+              </div>
+
+              <button class="secondary-btn">Apply</button>
+            </div>
 
             <p class="gray f6 pb3">* Required fields</p>
 
