separate block item-details

--- a/app/_home.html
+++ b/app/_home.html
@@ -430,6 +430,16 @@
             </div>
 
             <p class="marked mb4 bold">Please fill in all the blanks in English.</p>
+          </div>
+        </div>
+
+        <div class="checkout-block shadow">
+
+          <div class="card-header">
+            <h2 class="f2 bold">Item details</h2>
+          </div>
+
+          <div class="inner-wrapper">
 
             <div class="products-row">
 
@@ -535,7 +545,7 @@
 
             <p class="gray f6 pb3">* Required field</p>
 
-            <p class="f3 bold mb3">Card infornation</p>
+            <p class="f3 bold mb3">Card information</p>
 
             <div class="row-form flex">
               <div class="form-input mb3 w-50 pr-1 pl-1">
