fix sticky aside

--- a/app/_home.html
+++ b/app/_home.html
@@ -776,7 +776,7 @@
 
       <aside class="aside">
 
-      <div class="checkout-block shadow">
+      <div class="checkout-block shadow sticky-p">
         <div class="inner-wrapper">
 
           <button class="primary-btn w-100 bold mb3" type="submit">Place order</button>
