--- a/app/_home.html
+++ b/app/_home.html
@@ -657,107 +657,112 @@
                 <span class="f5 bold pl-1">Billing address as Shipping</span></label>
             </div>
 
-            <p class="f3 bold mb3">Billing address</p>
+            <div class="billing-address-section" id="billing_address_section">
 
-            <div class="row-form flex">
-              <div class="form-input mb3 w-50 pr-1 pl-1">
-                <div class="input-wrapper">
-                  <input type="text" name="billing_street" id="billing_street" value="" placeholder="Street address*">
+              <p class="f3 bold mb3">Billing address</p>
+
+              <div class="row-form flex">
+                <div class="form-input mb3 w-50 pr-1 pl-1">
+                  <div class="input-wrapper">
+                    <input type="text" name="billing_street" id="billing_street" value="" placeholder="Street address*">
+                  </div>
+                </div>
+
+                <div class="form-input mb3 w-50 pr-1 pl-1">
+                  <div class="input-wrapper">
+                    <input type="text" name="billing_appart" id="billing_appart" value="" placeholder="Apart or unit">
+                  </div>
                 </div>
               </div>
 
-              <div class="form-input mb3 w-50 pr-1 pl-1">
-                <div class="input-wrapper">
-                  <input type="text" name="billing_appart" id="billing_appart" value="" placeholder="Apart or unit">
+              <div class="row-form flex">
+                <div class="form-input mb3 w-50 pr-1 pl-1">
+                  <div class="input-wrapper">
+                    <input type="text" name="billing_city" id="billing_city" value="" placeholder="City">
+                  </div>
+                </div>
+
+                <div class="form-input mb3 w-50 pr-1 pl-1">
+                  <div class="input-wrapper">
+                    <select id="billing_state" name="billing_state">
+                      <option value="" selected disabled>State*</option>
+                      <option value="AL">Alabama</option>
+                      <option value="AK">Alaska</option>
+                      <option value="AS">American Samoa</option>
+                      <option value="AZ">Arizona</option>
+                      <option value="AR">Arkansas</option>
+                      <option value="CA">California</option>
+                      <option value="CO">Colorado</option>
+                      <option value="CT">Connecticut</option>
+                      <option value="DE">Delaware</option>
+                      <option value="DC">District Of Columbia</option>
+                      <option value="FM">Federated States Of Micronesia</option>
+                      <option value="FL">Florida</option>
+                      <option value="GA">Georgia</option>
+                      <option value="GU">Guam</option>
+                      <option value="HI">Hawaii</option>
+                      <option value="ID">Idaho</option>
+                      <option value="IL">Illinois</option>
+                      <option value="IN">Indiana</option>
+                      <option value="IA">Iowa</option>
+                      <option value="KS">Kansas</option>
+                      <option value="KY">Kentucky</option>
+                      <option value="LA">Louisiana</option>
+                      <option value="ME">Maine</option>
+                      <option value="MH">Marshall Islands</option>
+                      <option value="MD">Maryland</option>
+                      <option value="MA">Massachusetts</option>
+                      <option value="MI">Michigan</option>
+                      <option value="MN">Minnesota</option>
+                      <option value="MS">Mississippi</option>
+                      <option value="MO">Missouri</option>
+                      <option value="MT">Montana</option>
+                      <option value="NE">Nebraska</option>
+                      <option value="NV">Nevada</option>
+                      <option value="NH">New Hampshire</option>
+                      <option value="NJ">New Jersey</option>
+                      <option value="NM">New Mexico</option>
+                      <option value="NY">New York</option>
+                      <option value="NC">North Carolina</option>
+                      <option value="ND">North Dakota</option>
+                      <option value="MP">Northern Mariana Islands</option>
+                      <option value="OH">Ohio</option>
+                      <option value="OK">Oklahoma</option>
+                      <option value="OR">Oregon</option>
+                      <option value="PW">Palau</option>
+                      <option value="PA">Pennsylvania</option>
+                      <option value="PR">Puerto Rico</option>
+                      <option value="RI">Rhode Island</option>
+                      <option value="SC">South Carolina</option>
+                      <option value="SD">South Dakota</option>
+                      <option value="TN">Tennessee</option>
+                      <option value="TX">Texas</option>
+                      <option value="UT">Utah</option>
+                      <option value="VT">Vermont</option>
+                      <option value="VI">Virgin Islands</option>
+                      <option value="VA">Virginia</option>
+                      <option value="WA">Washington</option>
+                      <option value="WV">West Virginia</option>
+                      <option value="WI">Wisconsin</option>
+                      <option value="WY">Wyoming</option>
+                    </select>
+                    <svg class="caret" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true" role="presentation">
+                      <path d="M8 10l3.5-4h-7z" fill-rule="evenodd"></path>
+                    </svg>
+                  </div>
                 </div>
               </div>
+
+              <div class="row-form flex">
+                <div class="form-input mb3 w-50 pr-1 pl-1">
+                  <div class="input-wrapper">
+                    <input type="text" name="billing_zip" id="billing_zip" value="" placeholder="Zip">
+                  </div>
+                </div>
+              </div>
+
             </div>
 
-            <div class="row-form flex">
-              <div class="form-input mb3 w-50 pr-1 pl-1">
-                <div class="input-wrapper">
-                  <input type="text" name="billing_city" id="billing_city" value="" placeholder="City">
-                </div>
-              </div>
-
-              <div class="form-input mb3 w-50 pr-1 pl-1">
-                <div class="input-wrapper">
-                  <select id="billing_state" name="billing_state">
-                    <option value="" selected disabled>State*</option>
-                    <option value="AL">Alabama</option>
-                    <option value="AK">Alaska</option>
-                    <option value="AS">American Samoa</option>
-                    <option value="AZ">Arizona</option>
-                    <option value="AR">Arkansas</option>
-                    <option value="CA">California</option>
-                    <option value="CO">Colorado</option>
-                    <option value="CT">Connecticut</option>
-                    <option value="DE">Delaware</option>
-                    <option value="DC">District Of Columbia</option>
-                    <option value="FM">Federated States Of Micronesia</option>
-                    <option value="FL">Florida</option>
-                    <option value="GA">Georgia</option>
-                    <option value="GU">Guam</option>
-                    <option value="HI">Hawaii</option>
-                    <option value="ID">Idaho</option>
-                    <option value="IL">Illinois</option>
-                    <option value="IN">Indiana</option>
-                    <option value="IA">Iowa</option>
-                    <option value="KS">Kansas</option>
-                    <option value="KY">Kentucky</option>
-                    <option value="LA">Louisiana</option>
-                    <option value="ME">Maine</option>
-                    <option value="MH">Marshall Islands</option>
-                    <option value="MD">Maryland</option>
-                    <option value="MA">Massachusetts</option>
-                    <option value="MI">Michigan</option>
-                    <option value="MN">Minnesota</option>
-                    <option value="MS">Mississippi</option>
-                    <option value="MO">Missouri</option>
-                    <option value="MT">Montana</option>
-                    <option value="NE">Nebraska</option>
-                    <option value="NV">Nevada</option>
-                    <option value="NH">New Hampshire</option>
-                    <option value="NJ">New Jersey</option>
-                    <option value="NM">New Mexico</option>
-                    <option value="NY">New York</option>
-                    <option value="NC">North Carolina</option>
-                    <option value="ND">North Dakota</option>
-                    <option value="MP">Northern Mariana Islands</option>
-                    <option value="OH">Ohio</option>
-                    <option value="OK">Oklahoma</option>
-                    <option value="OR">Oregon</option>
-                    <option value="PW">Palau</option>
-                    <option value="PA">Pennsylvania</option>
-                    <option value="PR">Puerto Rico</option>
-                    <option value="RI">Rhode Island</option>
-                    <option value="SC">South Carolina</option>
-                    <option value="SD">South Dakota</option>
-                    <option value="TN">Tennessee</option>
-                    <option value="TX">Texas</option>
-                    <option value="UT">Utah</option>
-                    <option value="VT">Vermont</option>
-                    <option value="VI">Virgin Islands</option>
-                    <option value="VA">Virginia</option>
-                    <option value="WA">Washington</option>
-                    <option value="WV">West Virginia</option>
-                    <option value="WI">Wisconsin</option>
-                    <option value="WY">Wyoming</option>
-                  </select>
-                  <svg class="caret" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true" role="presentation">
-                    <path d="M8 10l3.5-4h-7z" fill-rule="evenodd"></path>
-                  </svg>
-                </div>
-              </div>
-            </div>
-
-            <div class="row-form flex">
-              <div class="form-input mb3 w-50 pr-1 pl-1">
-                <div class="input-wrapper">
-                  <input type="text" name="billing_zip" id="billing_zip" value="" placeholder="Zip">
-                </div>
-              </div>
-            </div>
           </div>
         </div>
 
